# CineGrade-AI

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package.json
cmake/: CompilerFlags.cmake  FindIllustratorSDK.cmake  FindOnnxRuntime.cmake  Windowsx64Setup.cmake
core/: ai_engine.h  color_math.h
include/ai/: OnnxEnvironment.h  SubjectMaskProcessor.h  U2NetSegmentation.h
include/color/: ColorSpaceConverter.h  GamutBoundaryHandler.h  LabColorMath.h  RgbColorMath.h
include/commands/: ApplyColorWheelsCommand.h  ApplyCurvesCommand.h  ApplyLevelsCommand.h  FlattenBakeCommand.h  GenerateLutCommand.h  ToggleEyeCommand.h  TogglePrepressCommand.h
include/core/: CineGradeEntryPoint.h  MemoryManager.h  UxpNativeBridge.h
include/curves/: AnchorPointCalculator.h  CurveInterpolator.h
include/gpu/: ClColorKernels.h  GpuKernelCompiler.h  OpenCLContext.h
include/histogram/: HistogramAnalyzer.h  LuminanceRangeSeparator.h
include/illustrator/: ArtboardHandle.h  PluginUtilities.h  SuiteAcquisition.h
include/illustrator/src/illustrator/: SuiteAcquisition.cpp
include/image/: ArtboardSampler.h  PixelBuffer.h
include/io/: FileSerializer.h  IccProfileLoader.h
include/levels/: BlackWhiteClipper.h  InputOutputMapper.h
include/lut/: CubeLutParser.h  Lut3DGenerator.h  LutApplier.h
include/preview/: TileRenderer.h  ViewportSynchronizer.h
include/renderer/: NonDestructiveStack.h  PixelBlendingPipeline.h
include/utils/: Logger.h  PerformanceProfiler.h
include/vector/: PathGeometryExtractor.h  VectorRasterizerBridge.h
resources/icons/: README_ICONS.md
scripts/: build_win64_debug.bat  build_win64_release.bat  package_uxp_extension.ps1  run_unit_tests.ps1  setup_vs_solution.ps1
src/ai/: OnnxEnvironment.cpp  README.md  SubjectMaskProcessor.cpp  U2NetSegmentation.cpp
src/color/: ColorSpaceConverter.cpp  GamutBoundaryHandler.cpp  LabColorMath.cpp  README.md  RgbColorMath.cpp
src/commands/: ApplyColorWheelsCommand.cpp  ApplyCurvesCommand.cpp  ApplyLevelsCommand.cpp  FlattenBakeCommand.cpp  GenerateLutCommand.cpp  README.md  ToggleEyeCommand.cpp  TogglePrepressCommand.cpp
src/core/: CineGradeEntryPoint.cpp  MemoryManager.cpp  README.md  UxpNativeBridge.cpp
src/curves/: AnchorPointCalculator.cpp  CurveInterpolator.cpp  README.md
src/gpu/: ClColorKernels.cpp  GpuKernelCompiler.cpp  OpenCLContext.cpp  README.md
src/halftone/: README.md
src/histogram/: HistogramAnalyzer.cpp  LuminanceRangeSeparator.cpp  README.md
src/illustrator/: ArtboardHandle.cpp  PluginUtilities.cpp  README.md
src/image/: ArtboardSampler.cpp  PixelBuffer.cpp  README.md
src/io/: FileSerializer.cpp  IccProfileLoader.cpp  README.md
src/levels/: BlackWhiteClipper.cpp  InputOutputMapper.cpp  README.md
src/lut/: CubeLutParser.cpp  Lut3DGenerator.cpp  LutApplier.cpp  README.md
src/preview/: README.md  TileRenderer.cpp  ViewportSynchronizer.cpp
src/renderer/: NonDestructiveStack.cpp  PixelBlendingPipeline.cpp  README.md
src/utils/: Logger.cpp  PerformanceProfiler.cpp  README.md
src/vector/: PathGeometryExtractor.cpp  README.md  VectorRasterizerBridge.cpp
ui/: index.html  main.js  manifest.json  style.css
ui/assets/fonts/: README_FONTS.md
